# ros_name_sensei_271496_ws

./: .dockerignore  Dockerfile  README.md  assignment5_ros_name_sensei.odt  assignment6_ros_name_sensei.odt  how_to_docker.txt  requirements.txt
660610840_final/: .gitignore  bridge_split.sh  how_to_run_ros1_bridge.txt  startup.sh
660610840_final/src/name_sensei_proj/: CMakeLists.txt  package.xml
660610840_final/src/name_sensei_proj/config/: drive_sequence.yaml  joystick.yaml  robot_movement.yaml
660610840_final/src/name_sensei_proj/control/keyboard/: keyboard_control.py  keyboard_control_own_msg.py
660610840_final/src/name_sensei_proj/control/mediapipe/: mediapipe_control.py  mediapipe_control_own_msg.py
660610840_final/src/name_sensei_proj/launch/: control_launch.py
660610840_final/src/name_sensei_proj/msg/: MecanumCmd.msg
660610840_final/src/name_sensei_proj/src/: lock_client.py  main_controller.py  obj_nearest_alert.py  udp_receiver_pub_ros2.py  udp_receiver_pub_ros2_old.py  udp_sender_sub_from_ros2.py  udp_sender_sub_from_ros2_old.py
660610840_final/src/name_sensei_proj/srv/: SetMode.srv
src/assign2_660610840/: package.xml  setup.cfg  setup.py
src/assign2_660610840/assign2_660610840/: hearer1_660610840.py  whisper_660610840.py
src/assign5_660610840/: package.xml  setup.cfg  setup.py
src/assign5_660610840/assign5_660610840/: hearer2_660610840.py
src/assign6_660610840/: package.xml  setup.cfg  setup.py
src/custom_action_interfaces/: CMakeLists.txt  package.xml
src/custom_action_py/: CMakeLists.txt  package.xml
(+6 files in other folders)
